--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
     implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
     implementation 'org.ftclib.ftclib:core:2.0.1' // core
+    implementation 'org.openftc:easyopencv:1.5.2' // easy open cv
     implementation 'org.openftc:apriltag:1.1.0' // detecting ArUco markers / AprilTags
 }
