--- a/MeepMeepTool/build.gradle
+++ b/MeepMeepTool/build.gradle
@@ -13,5 +13,6 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.github.NoahBres:MeepMeep:2.0.1'
 }
